<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_featured"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_category"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_laptops"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_computers"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_memories"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_desks"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_gaming_chair"
        />
    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?attr/colorPrimary"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_account"
        />
</merge>